--- a/singolo1.css
+++ b/singolo1.css
@@ -11,8 +11,7 @@ body {
 }
 
 header {
-    /*background-color: #2d303a;*/
-    background-color: thistle;
+    background-color: #2d303a;
     padding-top: 9px;
     padding-bottom: 80px;
     border-bottom: 6px solid #323746;
@@ -29,7 +28,6 @@ a {
     width: 150px;
     padding-left: 40px;
     font-size: 17px;
-    
 }
 
 .brand a {
@@ -48,23 +46,26 @@ a {
     display: block;
     float: right;
     padding-top: 29px;
-    padding-right: 26px;
+    padding-right: 40px;
 }
 
 .nav a {
-    padding: 13px;
+    padding: 14px 0 13px 10px;
+    letter-spacing: -0.1px;
     text-transform: uppercase;
     font-size: 12px;
     font-weight: bold;
     display: inline;
 }
 
-.nav p {
-    display: inline;
-    border: 1px solid black; 
-    border-radius: 150%; 
-    font-size: 20px;
-    height: 1px;
+.nav a:active {
+    cursor: pointer;
+    color: #f06c64;
+}
+
+.nav a:hover {
+    cursor: pointer;
+    color: #f06c64;
 }
 
 .slider {
@@ -75,16 +76,16 @@ a {
 
 .slider .btn-left {
     position: absolute;
-    top: 281px;
-    left: 42px;
+    top: 280px;
+    left: 36px;
     background: none;
     border: none;
 }
 
 .slider .btn-right {
     position: absolute;
-    top: 281px;
-    right: 40px;
+    top: 280px;
+    right: 35px;
     background: none;
     border: none;
 }
