--- a/singolo1.css
+++ b/singolo1.css
@@ -68,6 +68,10 @@ a {
     color: #f06c64;
 }
 
+nav a:nth-of-type(even) {
+    color: #494e62;
+}
+
 .slider {
     padding-bottom: 55px;
     background-color: #f06c64;
@@ -85,7 +89,7 @@ a {
 .slider .btn-right {
     position: absolute;
     top: 280px;
-    right: 35px;
+    right: 34px;
     background: none;
     border: none;
 }
@@ -124,7 +128,7 @@ a {
 .our-services h1 {
     font-size: 30px;
     font-weight: bold;
-    padding-top: 35px;
+    padding-top: 34px;
     padding-left: 40px;
     letter-spacing: 0.3px;
     margin-bottom: 0;
@@ -135,62 +139,119 @@ a {
     padding-left: 40px;
     padding-top: 0;
     font-size: 17px;
-    line-height: 28px;
+    line-height: 30px;
     margin-top: 19px;
     letter-spacing: 0.4px;
-
-    color: darkblue;
 }
 
-/*
+.our-services .description span {
+    letter-spacing: 0.2px;
+}
+
 .grid-box {
     display: grid;
     grid-template-columns: 80px 240px 80px 240px 80px 240px;
     margin-left: 40px;
     margin-top: 21px;
-
-
-    margin-bottom: 10px;
-    
+    margin-bottom: 2px;
 }
-*/
-
-.grid-box {
-    display: grid;
-    grid-template-columns: 80px 240px 80px 240px 80px 240px;
-    grid-template-rows: 2;
-    margin-left: 40px;
-    margin-top: 21px;
-
-
-    margin-bottom: 10px;
-    
-}
-
 
 .grid-box .item-service {
-    
     padding-left: 0px;
+}
+
+.grid-box .item-service:nth-of-type(1n+4) {
+    margin-top: 0px;
+
 }
 
 .grid-box .item-service h3 {
     margin-bottom: 0;
-    margin-left: -1px;
-    letter-spacing: -0.2px;
-    margin-top: 20px;
+    margin-top: 21px;
 }
 
+.grid-box .item-service:nth-of-type(3n+3) h3 {
+    padding-left: 1px;
+}
+
+.grid-box .item-service:nth-of-type(2) h3 {
+    letter-spacing: -0.1px;
+}
+
+.grid-box .item-service:nth-of-type(1) h3 {
+    letter-spacing: -0.3px;
+    margin-bottom: 9px;
+}
+
+.grid-box .item-service:nth-of-type(3) h3 {
+    letter-spacing: -0.1px;
+}
+
+.grid-box .item-service:nth-of-type(4) h3 {
+    letter-spacing: -0.1px;
+}
+
+.grid-box .item-service:nth-of-type(5) h3 {
+    letter-spacing: -0.2px;
+    margin-left: -1px;
+}
+
+.grid-box .item-service:nth-of-type(4) p {
+    line-height: 21px;
+    padding-left: 1px;
+}
+
+.grid-box .item-service:nth-of-type(5) p {
+    padding-top: 0;
+    line-height: 21px;
+}
+
+
 .grid-box .item-service p {
-    margin-top: 9px;
+    margin-top: 8px;
     padding-right: 20px;
-    color: violet;
     line-height: 21px;
     font-size: 12px;
-    margin-bottom: 10px;
+    margin-bottom: 7px;
+    text-align: justify;
+}
+
+.grid-box .item-service:nth-of-type(4) span {
+    letter-spacing: 0.2px;
+    line-height: 23px;
+}
+
+.grid-box .item-service:nth-of-type(5) span {
+    line-height: 23px;
+}
+
+.grid-box .item-service:nth-of-type(6) {
+    line-height: 21px;
+}
+
+.grid-box .item-service:nth-of-type(1) span {
 }
 
 .grid-box img {
     position: relative;
+    top: 26px;
+    left: 0px;
+}
+
+.grid-box img:nth-of-type(4n+1) {
+    left: 1px;
+}
+
+.grid-box img:nth-of-type(2n+4) {
     top: 25px;
     left: 1px;
+}
+
+.grid-box img:nth-of-type(5) {
+    top: 25px;
+    left: 0;
+}
+
+.grid-box img:nth-of-type(6) {
+    left: 0;
 }
