--- a/singolo1.css
+++ b/singolo1.css
@@ -152,7 +152,7 @@ nav a:nth-of-type(even) {
     display: grid;
     grid-template-columns: 80px 240px 80px 240px 80px 240px;
     margin-left: 40px;
-    margin-top: 21px;
+    margin-top: 22px;
     margin-bottom: 2px;
 }
 
@@ -180,7 +180,6 @@ nav a:nth-of-type(even) {
 
 .grid-box .item-service:nth-of-type(1) h3 {
     letter-spacing: -0.3px;
-    margin-bottom: 9px;
 }
 
 .grid-box .item-service:nth-of-type(3) h3 {
@@ -194,6 +193,14 @@ nav a:nth-of-type(even) {
 .grid-box .item-service:nth-of-type(5) h3 {
     letter-spacing: -0.2px;
     margin-left: -1px;
+}
+
+.grid-box .item-service:nth-of-type(6) h3 {
+    margin-top: 22px;
+}
+
+.grid-box .item-service:nth-of-type(1) p {
+    padding-left: 1px;
 }
 
 .grid-box .item-service:nth-of-type(4) p {
@@ -216,12 +223,7 @@ nav a:nth-of-type(even) {
     text-align: justify;
 }
 
-.grid-box .item-service:nth-of-type(4) span {
-    letter-spacing: 0.2px;
-    line-height: 23px;
-}
-
-.grid-box .item-service:nth-of-type(5) span {
+.grid-box .item-service span {
     line-height: 23px;
 }
 
@@ -229,12 +231,9 @@ nav a:nth-of-type(even) {
     line-height: 21px;
 }
 
-.grid-box .item-service:nth-of-type(1) span {
-}
-
 .grid-box img {
     position: relative;
-    top: 26px;
+    top: 25px;
     left: 0px;
 }
 
