--- a/singolo2.css
+++ b/singolo2.css
@@ -12,7 +12,7 @@ body {
 
 .container {
     width: 1020px;
-    margin: 0 0 0 40px;
+    margin: auto;
     position: relative;
 }
 
@@ -26,47 +26,55 @@ body {
     color: #666d89;
     padding-top: 60px;
     font-size: 30px;
-    letter-spacing: 0.7px;
+    letter-spacing: 0.6px;
     font-family: 'Lato', sans-serif;
+    margin-left: 40px;
 }
 
 .portfolio p {
     color: #666d89;
-    font-size: 17px;
-    padding-top: 23.5px;
-    letter-spacing: 0.2px;
+    font-size: 18px;
+    padding-top: 22.5px;
+    letter-spacing: -0.2px;
     margin-bottom: 14.5px;
+    margin-left: 40px;
 }
 
 .portfolio button {
     display: inline-block;
-    margin-right: 6.5px;
-    padding: 2px 6px 4px 7px;
+    margin-right: 6.5px; /*
+    padding: 2px 6px 4px 7px; */
     background: none;
     font-size: 12px;
     color: #767e9e;
     border: 1px solid #666d89;
     border-radius: 5px;
+    height: 22px;
 }
 
 .portfolio button:first-of-type {
-    margin-left: 1px;
+    margin-left: 41px;
+    width: 29px;
+
 }
 
-.portfolio button:nth-of-type(2) {
-    padding-right: 5.5px;
+.portfolio button:nth-of-type(2) { /*
+    padding-right: 5.5px; */
+    margin-left: 1px;
+    padding-left: 1px;
+    width: 78px;
 }
 
 .portfolio button:nth-of-type(3) {
-    padding-left: 6px;
-    padding-right: 5px;
+    width: 93px;
     margin-right: 7px;
+    padding-left: 1px;
 }
 
 .portfolio button:nth-of-type(4) {
-    padding-left: 5px;
-    padding-right: 5px;
-    letter-spacing: 0.1px;
+    padding-left: 1px;
+    letter-spacing: normal;
+    width: 57px;
 }
 
 .portfolio button:hover {
@@ -76,11 +84,13 @@ body {
 }
 
 .gallery {
-    padding-top: 18px;
+    padding: 18.5px 0 71.5px 0;
+
     display: grid;
     grid-template-columns: 220px 220px 220px 220px;
     gap: 20px;
     margin-bottom: 2000px;
+    margin-left: 40px;
     background-color: #2d303a;
 }
 
@@ -91,7 +101,7 @@ body {
 .wrapper-1 {
     height: 187px;
     overflow: hidden;
-    background-image: url("./assests/pic1.png");
+    background-image: url("./assets/pic1.png");
     background-position: 45% 22%;
     background-color: #464b5e;
 }
@@ -99,13 +109,13 @@ body {
 .wrapper-2 {
     height: 187px;
     overflow: hidden;
-    background-image: url("./assests/pic2.png");
+    background-image: url("./assets/pic2.png");
     background-position: 57% 50%;
     background-color: #464b5e;
 }
 .wrapper-3 {
     height: 187px;
-    background-image: url("./assests/pic3.png");
+    background-image: url("./assets/pic3.png");
     overflow: hidden;
     background-position: 35% 1%;
     background-color: #464b5e;
@@ -113,71 +123,71 @@ body {
 
 .wrapper-4 {
     height: 187px;
-    background-image: url("./assests/pic4.png");
+    background-image: url("./assets/pic4.png");
     overflow: hidden;
     background-position: 57% 25%;
     background-color: #464b5e;
 }
 
 .wrapper-5 {
-    height: 188px;
-    background-image: url("./assests/pic5.png");
+    height: 187px;
+    background-image: url("./assets/pic5.png");
     overflow: hidden;
-    background-position: 57% 30%;
+    background-position: -10px -16px;
     background-color: #464b5e;
 }
 
 .wrapper-6 {
-    height: 188px;
-    background-image: url("./assests/pic6.png");
+    height: 187px;
+    background-image: url("./assets/pic6.png");
     overflow: hidden;
-    background-position: 57% 30%;
+    background-position: -16px -4px;
     background-color: #464b5e;
 }
 
 .wrapper-7 {
-    height: 188px;
-    background-image: url("./assests/pic7.png");
+    height: 187px;
+    background-image: url("./assets/pic7.png");
     overflow: hidden;
-    background-position: 57% 30%;
+    background-position: -31px -39px;
     background-color: #464b5e;
 }
 
 .wrapper-8 {
-    height: 188px;
-    background-image: url("./assests/pic8.png");
+    height: 187px;
+    background-image: url("./assets/pic8.png");
     overflow: hidden;
-    background-position: 57% 30%;
+    background-position: -24px -32px;
     background-color: #464b5e;
 }
 
 .wrapper-9 {
-    height: 188px;
-    background-image: url("./assests/pic9.png");
+    height: 187px;
+    background-image: url("./assets/pic9.png");
     overflow: hidden;
-    background-position: 57% 30%;
+    background-position: -16px -2px;
     background-color: #464b5e;
 }
 
 .wrapper-10 {
     height: 188px;
-    background-image: url("./assests/pic10.png");
+    background-image: url("./assets/pic10.png");
     overflow: hidden;
-    background-position: 57% 30%;
+    background-position: -141px -113px;
     background-color: #464b5e;
 }
 
 .wrapper-11 {
     height: 188px;
-    background-image: url("./assests/pic11.png");
+    background-image: url("./assets/pic11.png");
     overflow: hidden;
-    background-position: 57% 30%;
+    background-position: -144px -175px;
     background-color: #464b5e;
 }
 
 .wrapper-12 {
-    height: 188px;
-    background-image: url("./assests/pic12.png");
+    height: 187px;
+    background-image: url("./assets/pic12.png");
     overflow: hidden;
     background-position: 57% 30%;
     background-color: #464b5e;
