--- a/singolo2.css
+++ b/singolo2.css
@@ -85,11 +85,9 @@ body {
 
 .gallery {
     padding: 18.5px 0 71.5px 0;
-
     display: grid;
     grid-template-columns: 220px 220px 220px 220px;
     gap: 20px;
-    margin-bottom: 2000px;
     margin-left: 40px;
     background-color: #2d303a;
 }
@@ -195,6 +193,66 @@ body {
 
 .gallery img {
     position: relative;
-    
     top: 20px;
+}
+
+.about-us {
+    background-color: #f2f2f2;
+}
+
+.about__title {
+    font-size: 29px;
+    letter-spacing: 1.1px;
+    font-weight: bolder;
+    padding-top: 60px;
+    margin-left: 41px;
+    margin-bottom: 19px;
+}
+
+.about__subtitle {
+    margin-left: 40px;
+    margin-bottom: 45px;
+    letter-spacing: -0.06px;
+    font-size: 18px;
+    line-height: 30px;
+    color: red;
+}
+
+.about__subtitle__compr {
+    letter-spacing: -0.22px;
+}
+
+.about {
+    display: grid;
+    grid-template-columns: 302px 302px 302px;
+    margin-left: 40px;
+    gap: 18px;
+}
+
+.about:last-child {
+}
+
+.about__item {
+    margin-bottom: 1000px;
+    color: #797f97;
+}
+
+.about__item h3 {
+    margin-top: 10px;
+}
+
+.about__item p {
+    color: red;
+    font-weight: 400;
+    margin-top: 8px;
+    font-size: 12px;
+    line-height: 21.5px;
+}
+
+.about__item:nth-of-type(1) p {
+    letter-spacing: -0.05px;
+}
+
+.about__item .lttr-sp {
+    letter-spacing: 0.1px;
 }
