--- a/singolo2.css
+++ b/singolo2.css
@@ -36,29 +36,27 @@ body {
     font-size: 18px;
     padding-top: 22px;
     letter-spacing: -0.2px;
-    margin-bottom: 14.5px;
+    margin-bottom: 14px;
     margin-left: 40px;
 }
 
 .portfolio button {
     display: inline-block;
-    margin-right: 6.5px; 
+    margin-right: 7px; 
     background: none;
     font-size: 12px;
     color: #767e9e;
     border: 1px solid #666d89;
     border-radius: 5px;
-    height: 22px;
+    line-height: 20px;
 }
 
 .portfolio button:first-of-type {
     margin-left: 41px;
     width: 29px;
-
 }
 
 .portfolio button:nth-of-type(2) { 
-    margin-left: 1px;
     padding-left: 1px;
     width: 78px;
 }
@@ -82,12 +80,13 @@ body {
 }
 
 .gallery {
-    padding: 18px 0 72px 0;
+    padding: 18px 0 67px 0;
     display: grid;
     grid-template-columns: 220px 220px 220px 220px;
     gap: 20px;
     margin-left: 40px;
     background-color: #2d303a;
+    border-bottom: 6px solid #323746;
 }
 
 .bc {
@@ -197,6 +196,8 @@ body {
 .about-us {
     background-color: #f2f2f2;
     color: #797f97;
+    padding-bottom: 60px;
+    border-bottom: 6px solid #ffffff;
 }
 
 .about__title {
@@ -205,7 +206,7 @@ body {
     font-weight: bolder;
     padding-top: 60px;
     margin-left: 41px;
-    margin-bottom: 19px;
+    margin-bottom: 18px;
 }
 
 .about__subtitle {
@@ -224,15 +225,19 @@ body {
     display: grid;
     grid-template-columns: 302px 302px 302px;
     margin-left: 40px;
-    gap: 18px;
+    gap: 17px;
 }
 
-.about__item {
-    padding-bottom: 140px;
+.about__item:nth-of-type(3) {
+    padding-left: 2px;
 }
 
 .about__item h3 {
     margin-top: 12px;
+}
+
+.about__item:first-of-type h3 {
+    letter-spacing: -0.1px;
 }
 
 .about__item p {
@@ -257,4 +262,17 @@ body {
 .about__item .about__logo {
     margin-top: 23px;
     margin-right: 3px;
+}
+
+.about-us .about__item:nth-of-type(3) .about__logo {
+    margin-left: -1px;
+    margin-right: 4px;
+}
+
+.about__item .about__logo:hover {
+    cursor: pointer;
+    box-shadow: 0 15px 25px rgba(202, 199, 199, 0.315);
+    transform: translateY(-5px);
+    transition: .5s;
+    border-radius: 50%;
 }
